unpackaged/main/default/objects/Merchant_Sales__c/Merchant_Sales__c.object-meta.xml
<CustomObject>
    <description>This is where the Merchant Sales CC Statements will be stored.</description>
    <label>Merchant Sales</label>
    <nameField>
        <displayFormat>Statement {000000}</displayFormat>
        <label>Merchant Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchant Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>