unpackaged/main/default/objects/Merchant_Sales__c/fields/Total_CC_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_CC_Sales__c</fullName>
    <label>Total CC Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>